--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="age">
                 <h3>Fascia d'età</h3>
-                <select id="top-age">
+                <select id="top-age" class="round">
                     <option value="18-65">18-65</option>
                     <option value="minorenne">minorenne</option>
                     <option value="over65">over65</option>
@@ -34,34 +34,34 @@
             <button id="go-btn">Genera</button>
             <button id="ann-btn">Annulla</button>
         </div>
-      </form>
       
-      <div class="ticket-info">
-          <h2>DETTAGLIO PASSEGGERI</h2>
-          <div class="row">
-              <div class="bottom-name">
-                  <h2>NOME PASSEGGERO</h2>
-                  <div id="bottom-name-show"></div>
-              </div>
-              <div class="discount">
-                  <h3>Offerta</h3>
-                  <div id="ticket-type-show"></div>
-              </div>
-              <div class="carriage">
-                  <h3>Carrozza</h3>
-                  <div id="carriage-numer-show"></div>
-              </div>
-              <div class="cp-code">
-                  <h3>Codice CP</h3>
-                  <div id="cp-code-show"></div>
-              </div>
-              <div class="ticket-price">
-                  <h3>Costo del biglietto</h3>
-                  <div id="ticket-price-show"></div>
-              </div>
-          </div>
       </div>
-    </div>
+        <div class="ticket-info">
+            <h2>DETTAGLIO PASSEGGERI</h2>
+            <div class="row">
+                <div class="bottom-name">
+                    <h2>NOME PASSEGGERO</h2>
+                    <div id="bottom-name-show" class="h-20"></div>
+                </div>
+                <div class="discount">
+                    <h3>Offerta</h3>
+                    <div id="ticket-type-show" class="h-20"></div>
+                </div>
+                <div class="carriage">
+                    <h3>Carrozza</h3>
+                    <div id="carriage-numer-show" class="h-20"></div>
+                </div>
+                <div class="cp-code">
+                    <h3>Codice CP</h3>
+                    <div id="cp-code-show" class="h-20"></div>
+                </div>
+                <div class="ticket-price">
+                    <h3>Costo del biglietto</h3>
+                    <div id="ticket-price-show" class="h-20"></div>
+                </div>
+            </div>
+        </div>
+    </div>    
     <script src="script.js"></script>
 </body>
 </html>
