btn annulla and style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+
+        <h2 class="title">Calcola il prezzo del biglietto</h2>
+
       <div class="form">
         <div class="row">
 
@@ -36,6 +39,9 @@
         </div>
       
       </div>
+
+      <h2 class="title">Il tuo biglietto</h2>
+
         <div class="ticket-info">
             <h2>DETTAGLIO PASSEGGERI</h2>
             <div class="row">
