ticket section show only onclick

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <h2 class="title">Il tuo biglietto</h2>
 
-        <div class="ticket-info">
+        <div class="ticket-info d-none">
             <h2>DETTAGLIO PASSEGGERI</h2>
             <div class="row">
                 <div class="bottom-name">
