--- a/index.html
+++ b/index.html
@@ -40,33 +40,34 @@
       
       </div>
 
-      <h2 class="title">Il tuo biglietto</h2>
-
-        <div class="ticket-info d-none">
-            <h2>DETTAGLIO PASSEGGERI</h2>
-            <div class="row">
-                <div class="bottom-name">
-                    <h2>NOME PASSEGGERO</h2>
-                    <div id="bottom-name-show" class="h-20"></div>
-                </div>
-                <div class="discount">
-                    <h3>Offerta</h3>
-                    <div id="ticket-type-show" class="h-20"></div>
-                </div>
-                <div class="carriage">
-                    <h3>Carrozza</h3>
-                    <div id="carriage-numer-show" class="h-20"></div>
-                </div>
-                <div class="cp-code">
-                    <h3>Codice CP</h3>
-                    <div id="cp-code-show" class="h-20"></div>
-                </div>
-                <div class="ticket-price">
-                    <h3>Costo del biglietto</h3>
-                    <div id="ticket-price-show" class="h-20"></div>
+      <section class="d-none info-section">
+        <h2 class="title">Il tuo biglietto</h2>
+        <div class="ticket-info">
+                <h2>DETTAGLIO PASSEGGERI</h2>
+                <div class="row">
+                    <div class="bottom-name">
+                        <h2>NOME PASSEGGERO</h2>
+                        <div id="bottom-name-show" class="h-20"></div>
+                    </div>
+                    <div class="discount">
+                        <h3>Offerta</h3>
+                        <div id="ticket-type-show" class="h-20"></div>
+                    </div>
+                    <div class="carriage">
+                        <h3>Carrozza</h3>
+                        <div id="carriage-numer-show" class="h-20"></div>
+                    </div>
+                    <div class="cp-code">
+                        <h3>Codice CP</h3>
+                        <div id="cp-code-show" class="h-20"></div>
+                    </div>
+                    <div class="ticket-price">
+                        <h3>Costo del biglietto</h3>
+                        <div id="ticket-price-show" class="h-20"></div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </div>    
     <script src="script.js"></script>
 </body>
