--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
                 <div class="row">
                     <div class="bottom-name">
                         <h2>NOME PASSEGGERO</h2>
-                        <div id="bottom-name-show field" class="h-20"></div>
+                        <div id="bottom-name-show" class="h-20 field"></div>
                     </div>
                     <div class="discount">
                         <h3>Offerta</h3>
-                        <div id="ticket-type-show field" class="h-20"></div>
+                        <div id="ticket-type-show" class="h-20 field"></div>
                     </div>
                     <div class="carriage">
                         <h3>Carrozza</h3>
-                        <div id="carriage-numer-show field" class="h-20"></div>
+                        <div id="carriage-numer-show" class="h-20 field"></div>
                     </div>
                     <div class="cp-code">
                         <h3>Codice CP</h3>
-                        <div id="cp-code-show field" class="h-20"></div>
+                        <div id="cp-code-show" class="h-20 field"></div>
                     </div>
                     <div class="ticket-price">
                         <h3>Costo del biglietto</h3>
-                        <div id="ticket-price-show field" class="h-20"></div>
+                        <div id="ticket-price-show" class="h-20 field"></div>
                     </div>
                 </div>
             </div>
